--- a/School/Views/Professor/Index.cshtml
+++ b/School/Views/Professor/Index.cshtml
@@ -1,10 +1,11 @@
-﻿@model List<Aluno>
+﻿@model List<Professor>
+
 
 <div class="card shadow border-0 mt-4">
     <div class="card-header bg-secondary bg-gradient ml-0 py-3">
         <div class="row">
             <div class="col-12 text-center">
-                <h2 class="text-white py-2">Alunos</h2>
+                <h2 class="text-white py-2">Professor</h2>
             </div>
         </div>
     </div>
@@ -13,45 +14,29 @@
             <div class="col-6">
             </div>
             <div class="col-6 text-end">
-                <a asp-controller="Aluno" asp-action="Create" class="btn btn-primary">
-                    <i class="bi bi-plus-circle"></i>  Criar novo aluno
+                <a asp-controller="Professor" asp-action="Create" class="btn btn-primary">
+                    <i class="bi bi-plus-circle"></i>  Criar novo Professor
                 </a>
             </div>
         </div>
-
         <table class="table table-bordered table-striped">
             <thead>
                 <tr>
-                    <th>
-                        Nome
-                    </th> <th>
-                        Idade
-                    </th>
-                    <th>
-                        Numero
-                    </th> 
-                    <th>
-                        Turma
-                    </th>
+                    <th>Nome</th>
                     <th></th>
                 </tr>
             </thead>
             <tbody>
-                @foreach (var obj in Model.OrderBy(u => u.Numero))
+                @foreach (var obj in Model.OrderBy(u => u.Id))
                 {
                     <tr>
                         <td>@obj.Nome</td>
-                        <td>@obj.Idade</td>
-                        <td>@obj.Numero</td>
-                        <td>@obj.Turma.Nome</td>
-                        
-                       
                         <td>
                             <div class="w-75 btn-group" role="group">
-                                <a asp-controller="Aluno" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
+                                <a asp-controller="Professor" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
                                     <i class="bi bi-pencil-square"></i> Edit
                                 </a>
-                                <a asp-controller="Aluno" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
+                                <a asp-controller="Professor" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
                                     <i class="bi bi-trash-fill"></i> Delete
                                 </a>
                             </div>
@@ -60,6 +45,5 @@
                 }
             </tbody>
         </table>
-
     </div>
 </div>
